--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* === Custom styles === */
+
+/* avoid stretching the image too much on portrait screens */
+@media screen and (min-aspect-ratio: 0.75) and (max-aspect-ratio: 1.3) {
+  .photo-container {
+    /* gap.grid is set in tailwind.config.js */
+    max-width: calc((100% / 2) - theme("gap.grid") / 2) !important;
+    min-width: unset !important;
+  }
+}
+
+/* avoid stretching the image too much on larger landscape screens */
+@media screen and (min-aspect-ratio: 1.4) {
+  .photo-container {
+    max-width: calc((100% / 3) - theme("gap.grid") / 2) !important;
+    min-width: unset !important;
+  }
+}
