--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,10 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ title or config.title }}</title>
-    <meta name="description" content="{{ description or config.description }}" />
+    <meta
+      name="description"
+      content="{{ description or config.description }}"
+    />
     <script type="module" src="/js/main.ts"></script>
   </head>
-  <body class="{{ 'bg-black' if config.themePreference == 'dark' }}">
+  <body
+    class="{% if config.colorPreference == 'auto' %}dark:bg-black{% elif config.colorPreference == 'dark' %}bg-black{% endif %}"
+  >
     {{ content | safe }}
   </body>
 </html>
