--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -3,11 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ title or config.title }}</title>
-    <meta
-      name="description"
-      content="{{ description or config.description }}"
-    />
+    <title>{{ title | safe or config.title | safe }}</title>
+    <meta name="description" content="{{ description or config.description }}" />
     <script type="module" src="/js/main.ts"></script>
   </head>
   <body class="{% if config.colorPreference == 'auto' %}dark:bg-black{% elif config.colorPreference == 'dark' %}bg-black{% endif %}">
