--- a/src/photo.njk
+++ b/src/photo.njk
@@ -9,7 +9,7 @@ eleventyComputed:
   title: "{{ image | extractImageName | title }} | {{ config.title }}"
 ---
 
-{% set buttonLink = 'https://google.com' %}
+{# {% set buttonLink = 'https://google.com' %}
 {% set buttonIcon = 'src/_includes/icons/previous.njk' %} 
 {% include "src/_includes/components/button-link.njk" %} 
 
@@ -24,4 +24,8 @@ eleventyComputed:
 {% include "src/_includes/components/button.njk" %}
 
 {% set buttonIcon = 'src/_includes/icons/link.njk' %}
-{% include "src/_includes/components/button.njk" %}
+{% include "src/_includes/components/button.njk" %} #}
+
+{% include "src/_includes/components/dialog-details.njk" %}
+
+
