--- a/src/photo.njk
+++ b/src/photo.njk
@@ -26,6 +26,7 @@ eleventyComputed:
 {% set buttonIcon = 'src/_includes/icons/link.njk' %}
 {% include "src/_includes/components/button.njk" %} #}
 
+{% set imgObj = image %}
 {% include "src/_includes/components/dialog-details.njk" %}
 
 
