--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,9 @@
 @media screen and (min-aspect-ratio: 0.75) and (max-aspect-ratio: 1.3) {
   .photo-container {
     /* gap.grid is set in tailwind.config.js */
-    max-width: calc((100% / 2) - theme("gap.grid") / 2) !important;
+    max-width: calc(
+      (100% / 2) - calc(theme("gap.grid") - theme("gap.grid") / 2)
+    ) !important;
     min-width: unset !important;
   }
 }
