--- a/src/_includes/components/dialog-details.njk
+++ b/src/_includes/components/dialog-details.njk
@@ -1,73 +1,63 @@
-{# TODO: Check ESC keybindings #}
-{# TODO: Check for no data #}
-{# TODO: Check for certain missing parts #}
-{# TODO: hide scrollbar #}
-{# TODO: test different shutter speed values #}
-
 {# Color scheme #}
-{# Tailwind needs to see full class names. Can't use variables within classes as a result #}
-{% if config.colorPreference == 'dark' %}
+{# Tailwind needs to see full class names; can't use variables within classes as a result #}
+{%- if config.colorPreference == 'dark' -%}
   {% set dialogBgColor = "bg-black/30" %}
   {% set dialogBorderColor = "border-white/10" %}
   {% set dividerColor = "before:text-gray-300" %}
   {% set headerTextColor = "text-gray-50" %}
   {% set tagBgColor = "bg-gray-200/30" %}
   {% set textColor = "text-gray-100" %}
-{% elif config.colorPreference == 'light' %}
-  {% set dialogBgColor = "bg-white/30" %}
+{%- elif config.colorPreference == 'light' -%}
+  {% set dialogBgColor = "bg-white/40" %}
   {% set dialogBorderColor = "border-black/10" %}
   {% set dividerColor = "before:text-gray-600" %}
   {% set headerTextColor = "text-gray-950" %}
-  {% set tagBgColor = "bg-gray-400/30" %}
+  {% set tagBgColor = "bg-gray-300/30" %}
   {% set textColor = "text-gray-900" %}
-{% else %}
-  {% set dialogBgColor = "bg-white/30 dark:bg-black/30" %}
+{%- else -%}
+  {% set dialogBgColor = "bg-white/40 dark:bg-black/30" %}
   {% set dialogBorderColor = "border-black/10 dark:border-white/10" %}
   {% set dividerColor = "before:text-gray-600 dark:before:text-gray-300" %}
   {% set headerTextColor = "text-gray-950 dark:text-gray-50" %}
-  {% set tagBgColor = "bg-gray-400/30 dark:bg-gray-200/30" %}
+  {% set tagBgColor = "bg-gray-300/30 dark:bg-gray-200/30" %}
   {% set textColor = "text-gray-900 dark:text-gray-100" %}
-{% endif %}
+{%- endif -%}
 
 {# Calculate shutter speed #}
 {# https://photo.stackexchange.com/questions/108817/shutter-speed-from-the-exif-shutterspeedvalue #}
-{% if imgObj.exif.ShutterSpeedValue %}
-  {% set base = 2**imgObj.exif.ShutterSpeedValue %}
-  {% set roundedBase = base | round(-1) %}
-  {% set calculatedShutterSpeed = '1/' + roundedBase  %}
-{% endif %}
+{%- if imgObj.exif.ShutterSpeedValue -%}
+  {%- if imgObj.exif.ShutterSpeedValue < 0 -%}
+    {% set base = 2**(-imgObj.exif.ShutterSpeedValue) %}
+    {% set calculatedShutterSpeed = base | round(-1) %}
+  {%- else -%}
+    {% set base = 2**imgObj.exif.ShutterSpeedValue %}
+    {% set calculatedShutterSpeed = '1/' + base | round(-1) %}
+  {%- endif -%}
+{%- endif -%}
 
-<div class="flex h-screen w-screen items-center justify-center" style="background-image: url('https://images.unsplash.com/photo-1506252374453-ef5237291d83?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3992&q=80'); background-size: cover" id="">
-  <dialog open class="transition-all max-w-lg max-h-[90vh] overflow-x-hidden overflow-y-scroll rounded-lg p-10 backdrop-blur-3xl border-[1px] focus-visible:outline-0 {{ dialogBgColor }} {{ dialogBorderColor }}" id="details-dialog">
-    <button class="absolute appearance-none right-0 top-0 p-4 focus-visible:outline-0 hover:text-opacity-50 {{ textColor }}" onclick="(function(){ document.getElementById('details-dialog').close();})(this)">
-      {%- include "src/_includes/icons/close.njk" %}
-      <span class="sr-only">Close</span>
-    </button>
+<dialog class="z-50 max-w-lg max-h-[90vh] overflow-x-hidden overflow-y-scroll rounded-lg p-10 backdrop-blur-3xl border-[1px] focus-visible:outline-0 {{ dialogBgColor }} {{ dialogBorderColor }}" id="dialog-details">
+  <button class="absolute appearance-none right-0 top-0 p-4 focus-visible:outline-0 hover:text-opacity-50 {{ textColor }}" onclick="(function(){ document.getElementById('dialog-details').close();})(this)" title="Close">
+    {%- include "src/_includes/icons/close.njk" %}
+  </button>
 
-    <h1 class="mb-2 text-2xl font-semibold {{ headerTextColor }}">{{ imgObj.title }}</h1>
-    
-    <p class="max-h-44 overflow-scroll leading-7 {{ textColor }} mb-4">{{ imgObj.description }}</p>
+  {% if imgObj.title -%}<h1 class="mb-2 text-2xl font-semibold {{ headerTextColor }}">{{ imgObj.title }}</h1>{% endif -%}
+  
+  {% if imgObj.description -%}<p class="max-h-44 line-clamp-6 leading-7 {{ textColor }}" onclick="(function(el){el.classList.remove('line-clamp-6');el.classList.add('overflow-scroll')})(this)">{{ imgObj.description }}</p>{% endif -%}
 
-    {% if config.showExifData == 'true' -%}
-      <div class="mb-8">
-        {% if imgObj.exif.LensMake  %}
-          <div class="mb-2 {{ textColor }}">
-            <span class="inline-block align-baseline">
-              {%- include "src/_includes/icons/camera.njk" -%}
-            </span>
-            <span class="ml-2 inline-block align-text-bottom max-w-xs truncate">{{ imgObj.exif.LensMake }}</span>
-          </div>
-        {% endif %}
+  {% if (config.showExifData == 'true') and (imgObj.exif) -%}
+    <div class="my-6">
+      {# Sanity currently does not support EXIF data for camera make and model; only the lens make and model. #}
 
-        {% if imgObj.exif.LensModel %}
-          <div class="mb-2 {{ textColor }}">
-            <span class="inline-block align-baseline">
-              {%- include "src/_includes/icons/aperture.njk" -%}
-            </span>
-            <span class="ml-2 inline-block align-text-bottom max-w-xs truncate">{{ imgObj.exif.LensModel }}</span>
-          </div>
-        {% endif %}
+      {% if imgObj.exif.LensModel -%}
+        <div class="mb-2 {{ textColor }}">
+          <span class="inline-block align-baseline">
+            {%- include "src/_includes/icons/aperture.njk" -%}
+          </span>
+          <span class="ml-2 inline-block align-text-bottom max-w-xs truncate">{{ imgObj.exif.LensMake }} {{ imgObj.exif.LensModel }}</span>
+        </div>
+      {% endif -%}
 
+      {% if imgObj.exif.FNumber or calculatedShutterSpeed -%}
         <div class="mb-2 {{ textColor }}">
           <span class="inline-block align-baseline">
             {%- include "src/_includes/icons/settings.njk" -%}
@@ -91,13 +81,15 @@
             {%- endif %}
           </span>
         </div>
-      </div>
-    {% endif -%}
+      {% endif %}
+    </div>
+  {% endif -%}
 
-    <div class="w-full text-sm {{ textColor }}">
+  {% if imgObj.tags -%}
+    <div class="w-full text-sm {{ textColor }} mt-6">
       {% for tag in imgObj.tags -%}
         <span class="mr-2 mb-2 px-3 py-1 inline-block rounded-xl {{ tagBgColor }}">{{ tag }}</span>
       {%- endfor -%}
     </div>
-  </dialog>
-</div>
+  {% endif -%}
+</dialog>
