--- a/src/photo.njk
+++ b/src/photo.njk
@@ -13,7 +13,7 @@ eleventyComputed:
   <div class="max-w-[100vw] min-h-[100vh] relative" style="aspect-ratio: {{ image.aspectRatio }};">
     <div class="absolute min-h-full min-w-full backdrop-blur-xl transition-opacity duration-1000"></div>
     <img alt="{{ image.altText or image.title or 'Description not available' }}" class="max-h-[100vh] min-w-full max-w-[100vw] object-cover" src="{{ image.lqip }}" style="aspect-ratio: {{ image.aspectRatio }}" />
-    <img alt="{{ 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image.url }}?auto=format&w=2048" />
+    <img alt="{{ 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image.url }}?auto=format&w={{ config.photoWidth }}" />
   </div>
 
   {# Details dialog (modal) markup #}
