--- a/src/photo.njk
+++ b/src/photo.njk
@@ -10,10 +10,10 @@ eleventyComputed:
 ---
 
 <div class="flex h-screen w-screen items-center justify-center">
-  <div class="max-w-[100vw] min-h-[100vh] relative" style="aspect-ratio: {{ image.aspectRatio }};">
+  <div class="max-w-[100vw] min-h-[100vh] relative flex items-center" style="aspect-ratio: {{ image.aspectRatio | round(2) }}">
     <div class="absolute min-h-full min-w-full backdrop-blur-xl transition-opacity duration-1000"></div>
     <img alt="{{ image.altText or image.title or 'Description not available' }}" class="max-h-[100vh] min-w-full max-w-[100vw] object-cover" src="{{ image.lqip }}" style="aspect-ratio: {{ image.aspectRatio }}" />
-    <img alt="{{ 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image.url }}?auto=format&w={{ config.photoWidth }}" />
+    <img alt="{{ 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image.url }}?auto=format&{{ "w=" if image.aspectRatio > 1 else "h=" }}{{ config.photoWidth }}" />
   </div>
 
   {# Details dialog (modal) markup #}
