Photo view updates and other fixes (#17)
* Image name extraction

* Add new data field

* Add vscode settings

* Add buttons

* Fix formatting and paths

* Reset Tailwind config

* Condition updates

* Update options

* Fix css issue

* Fix css issue

* Update photo view

* Update photo view

* Update variable name

* Update config

* Fix build issue

* Photo path

* Add config for photo width

* Set photo and thumbnail width WRT aspect ratio

* Add keypress events

* Update Readme

* Fix local server forwarding issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,9 @@
 @media screen and (min-aspect-ratio: 0.75) and (max-aspect-ratio: 1.3) {
   .photo-container {
     /* gap.grid is set in tailwind.config.js */
-    max-width: calc((100% / 2) - theme("gap.grid") / 2) !important;
+    max-width: calc(
+      (100% / 2) - calc(theme("gap.grid") - theme("gap.grid") / 2)
+    ) !important;
     min-width: unset !important;
   }
 }
@@ -16,7 +18,9 @@
 /* avoid stretching the image too much on larger landscape screens */
 @media screen and (min-aspect-ratio: 1.4) {
   .photo-container {
-    max-width: calc((100% / 3) - theme("gap.grid") / 2) !important;
+    max-width: calc(
+      (100% / 3) - calc(theme("gap.grid") - theme("gap.grid") / 3)
+    ) !important;
     min-width: unset !important;
   }
 }
