--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,5 @@
 ---
-layout: base.njk
+layout: layouts/base.njk
 ---
 
 {# Rendering technique: this uses flexbox to create a masonry grid layout.
@@ -8,29 +8,12 @@ elements. First image element loads a small base64 placeholder image (lqip), and
 the second image element loads the thumbnail image. Once loaded, it replaces
 placeholder image with the thumbnail and changes opacity of the blur overlay. #}
 
-<div class="flex flex-wrap gap-grid">
+<div class="gap-grid flex flex-wrap">
   {% for image in sanity %}
-  <a
-    class="photo-container grow h-[40vh] leading-[40vh] max-w-full max-h-full relative hover:opacity-70 active:opacity-50 transition-opacity"
-    href="#"
-    style="aspect-ratio: {{ image.aspectRatio }}"
-  >
-    <div
-      class="backdrop-blur-xl absolute min-w-full min-h-full transition-opacity duration-1000"
-    ></div>
-    <img
-      alt="{{ image.altText or image.title or 'Description not available' }}"
-      class="max-w-full max-h-full min-w-full min-h-full object-cover"
-      src="{{ image.lqip }}"
-      style="aspect-ratio: {{ image.aspectRatio }}"
-    />
-    <img
-      alt="{{ 'Description not available' }}"
-      class="hidden"
-      onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)"
-      src="{{ image.url }}?auto=format&w={{ config.thumbnailWidth }}"
-      style="aspect-ratio: {{ image.aspectRatio }}"
-    />
-  </a>
+    <a class="photo-container relative h-[40vh] max-h-full max-w-full grow leading-[40vh] transition-opacity hover:opacity-70 active:opacity-50" href="{% if config.photoPath %}{{ config.photoPath }}/{% endif %}{{ image | extractImageName | slugify }}/" style="aspect-ratio: {{ image.aspectRatio }}">
+      <div class="absolute min-h-full min-w-full backdrop-blur-xl transition-opacity duration-1000"></div>
+      <img alt="{{ image.altText or image.title or 'Description not available' }}" class="max-h-full min-h-full min-w-full max-w-full object-cover" src="{{ image.lqip }}" style="aspect-ratio: {{ image.aspectRatio }}" />
+      <img alt="{{ 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image.url }}?auto=format&{{ "w=" if image.aspectRatio > 1 else "h=" }}{{ config.thumbnailWidth }}" />
+    </a>
   {% endfor %}
 </div>
