Fix script not loading issue

--- a/src/photo.njk
+++ b/src/photo.njk
@@ -63,5 +63,5 @@ eleventyComputed:
 </div>
 
 {%block js %}
-  <script src="/js/photo.ts"></script>
+  <script type="module" src="/js/photo.ts"></script>
 {% endblock %}
