--- a/src/photo.njk
+++ b/src/photo.njk
@@ -7,6 +7,7 @@ pagination:
 permalink: "{% if config.photoPath %}{{ config.photoPath }}/{% endif %}{{ image | extractImageName | slugify }}/"
 eleventyComputed:
   title: "{{ image | extractImageName | title }} | {{ config.title }}"
+  imageUrl: "{{ image.url }}"
 ---
 
 <div class="flex h-screen w-screen items-center justify-center">
