--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,6 +1,6 @@
 <!-- Metadata -->
 {% set metaTitle = title | safe if title else config.title | safe %}
-{% set metaDescription = description or config.description %}
+{% set metaDescription = description | truncate(160) if description else config.description %}
 {% set metaImage = [imageUrl,"?w=1200&fm=jpg"] | join if imageUrl else [config.siteUrl, "/metadata/meta-image.jpg"] | join %}
 {% set metaUrl = config.siteUrl %}
 
