--- a/src/photo.njk
+++ b/src/photo.njk
@@ -6,7 +6,7 @@ pagination:
   alias: image
 permalink: "{{ image | toRelativeURLFromPhotoObj }}/"
 eleventyComputed:
-  title: "{{ image | extractImageTitle | title }} | {{ config.title }}"
+  title: "{{ image | extractPhotoTitleFromPhotoObj | title }} | {{ config.title }}"
   description: "{{ image.description }}"
   imageUrl: "{{ image.url }}"
 ---
@@ -15,7 +15,7 @@ eleventyComputed:
   <div class="max-w-[100vw] min-h-[100svh] relative flex items-center" style="aspect-ratio: {{ image.aspectRatio | round(2) }}">
     <div class="absolute min-h-full min-w-full backdrop-blur-xl transition-opacity duration-1000"></div>
     <img alt="{{ image.altText or image.title or 'Description not available' }}" class="max-h-[100svh] min-w-full max-w-[100vw] object-cover" src="{{ image.lqip }}" style="aspect-ratio: {{ image.aspectRatio }}" />
-    <img alt="{{ image.altText or image.title or 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image.url }}?auto=format&{{ "w=" if image.aspectRatio > 1 else "h=" }}{{ config.photoWidth }}" />
+    <img alt="{{ image.altText or image.title or 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image | toOptimizedURLFromPhotoObj | safe }}" />
   </div>
 
   {# Details dialog (modal) markup #}
