--- a/src/index.njk
+++ b/src/index.njk
@@ -2,18 +2,18 @@
 layout: layouts/base.njk
 ---
 
-{# Rendering technique: this uses flexbox to create a masonry grid layout.
+{#- Rendering technique: this uses flexbox to create a masonry grid layout.
 Inside each container,there are 3 elements - 1 blur overlay and 2 image
 elements. First image element loads a small base64 placeholder image (lqip), and
 the second image element loads the thumbnail image. Once loaded, it replaces
-placeholder image with the thumbnail and changes opacity of the blur overlay. #}
+placeholder image with the thumbnail and changes opacity of the blur overlay. -#}
 
 <div class="gap-grid flex flex-wrap">
-  {% for image in sanity %}
-    <a class="photo-container relative h-[40vh] max-h-full max-w-full grow leading-[40vh] transition-opacity hover:opacity-70 active:opacity-50" href="{% if config.photoPath %}{{ config.photoPath }}/{% endif %}{{ image | extractImageName | slugify }}/" style="aspect-ratio: {{ image.aspectRatio }}">
+  {% for image in sanity -%}
+    <a class="photo-container relative h-[40vh] max-h-full max-w-full grow leading-[40vh] transition-opacity hover:opacity-70 active:opacity-50" href="{{ image | toRelativeURLFromPhotoObj }}/" style="aspect-ratio: {{ image.aspectRatio }}">
       <div class="absolute min-h-full min-w-full backdrop-blur-xl transition-opacity duration-1000"></div>
       <img alt="{{ image.altText or image.title or 'Description not available' }}" class="max-h-full min-h-full min-w-full max-w-full object-cover" src="{{ image.lqip }}" style="aspect-ratio: {{ image.aspectRatio }}" />
-      <img alt="{{ 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image.url }}?auto=format&{{ "w=" if image.aspectRatio > 1 else "h=" }}{{ config.thumbnailWidth }}" />
+      <img alt="{{ 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image | toOptimizedURLFromPhotoObj(true) | safe }}" />
     </a>
-  {% endfor %}
+  {% endfor -%}
 </div>
