--- a/src/photo.njk
+++ b/src/photo.njk
@@ -4,18 +4,18 @@ pagination:
   data: sanity
   size: 1
   alias: image
-permalink: "{% if config.photoPath %}{{ config.photoPath }}/{% endif %}{{ image | extractImageName | slugify }}/"
+permalink: "{{ image | toRelativeURLFromPhotoObj }}/"
 eleventyComputed:
-  title: "{{ image | extractImageName | title }} | {{ config.title }}"
+  title: "{{ image | extractPhotoTitleFromPhotoObj | title }} | {{ config.title }}"
   description: "{{ image.description }}"
   imageUrl: "{{ image.url }}"
 ---
 
-<div class="flex h-screen w-screen items-center justify-center">
-  <div class="max-w-[100vw] min-h-[100vh] relative flex items-center" style="aspect-ratio: {{ image.aspectRatio | round(2) }}">
+<div class="flex h-[100svh] w-screen items-center justify-center">
+  <div class="max-w-[100vw] min-h-[100svh] relative flex items-center" style="aspect-ratio: {{ image.aspectRatio | round(2) }}">
     <div class="absolute min-h-full min-w-full backdrop-blur-xl transition-opacity duration-1000"></div>
-    <img alt="{{ image.altText or image.title or 'Description not available' }}" class="max-h-[100vh] min-w-full max-w-[100vw] object-cover" src="{{ image.lqip }}" style="aspect-ratio: {{ image.aspectRatio }}" />
-    <img alt="{{ image.altText or image.title or 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image.url }}?auto=format&{{ "w=" if image.aspectRatio > 1 else "h=" }}{{ config.photoWidth }}" />
+    <img alt="{{ image.altText or image.title or 'Description not available' }}" class="max-h-[100svh] min-w-full max-w-[100vw] object-cover" src="{{ image.lqip }}" style="aspect-ratio: {{ image.aspectRatio }}" />
+    <img alt="{{ image.altText or image.title or 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image | toOptimizedURLFromPhotoObj | safe }}" />
   </div>
 
   {# Details dialog (modal) markup #}
@@ -27,7 +27,7 @@ eleventyComputed:
 
 {# Buttons #}
 {%- if pagination.href.previous -%}
-  <div class="flex fixed top-0 left-0 items-center min-h-[100vh]">
+  <div class="flex fixed top-0 left-0 items-center min-h-[100svh]">
     {% set buttonIcon = "src/_includes/icons/previous.njk" %}
     {% set buttonId = "previous" %} 
     {% set buttonTitle = "Previous photo (←)" %}
@@ -37,7 +37,7 @@ eleventyComputed:
 {%- endif -%}
 
 {%- if pagination.href.next -%}
-  <div class="flex fixed top-0 right-0 items-center min-h-[100vh]">
+  <div class="flex fixed top-0 right-0 items-center min-h-[100svh]">
     {% set buttonIcon = "src/_includes/icons/next.njk" %}
     {% set buttonId = "next" %} 
     {% set buttonTitle = "Next photo (→)" %}
@@ -60,7 +60,7 @@ eleventyComputed:
   {% set buttonIcon = "src/_includes/icons/close.njk" %}
   {% set buttonId = "close" %} 
   {% set buttonTitle = "Close (Esc)" %}
-  {% set buttonLink = config.basePath %} {# TODO: check if it goes to the previous place and check with subdomains #}
+  {% set buttonLink = ['/', config.basePathName] | join %} {# TODO: check if it goes to the previous place and check with subdomains #}
   {% include "src/_includes/components/button-link.njk" %}
 </div>
 
