--- a/src/preview.njk
+++ b/src/preview.njk
@@ -4,9 +4,9 @@ pagination:
   data: sanity
   size: 1
   alias: image
-permalink: "{{ image | toRelativeURLFromPhotoObj }}/"
+permalink: "{{ image | toRelativeURLFromObj }}/"
 eleventyComputed:
-  title: "{{ image | extractPhotoTitleFromPhotoObj | title }} | {{ config.title }}"
+  title: "{{ image | extractImageTitleFromObj | title }} | {{ config.title }}"
   description: "{{ image.description }}"
   imageUrl: "{{ image.url }}"
 ---
@@ -15,7 +15,7 @@ eleventyComputed:
   <div class="max-w-[100vw] min-h-[100svh] relative flex items-center" style="aspect-ratio: {{ image.aspectRatio | round(2) }}">
     <div class="absolute min-h-full min-w-full backdrop-blur-xl transition-opacity duration-1000"></div>
     <img alt="{{ image.altText or image.title or 'Description not available' }}" class="max-h-[100svh] min-w-full max-w-[100vw] object-cover" src="{{ image.lqip }}" style="aspect-ratio: {{ image.aspectRatio }}" />
-    <img alt="{{ image.altText or image.title or 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image | toOptimizedURLFromPhotoObj | safe }}" />
+    <img alt="{{ image.altText or image.title or 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image | toOptimizedURLFromObj | safe }}" />
   </div>
 
   {# Details dialog (modal) markup #}
@@ -30,7 +30,7 @@ eleventyComputed:
   <div class="flex fixed top-0 left-0 items-center min-h-[100svh]">
     {% set buttonIcon = "src/_includes/icons/previous.njk" %}
     {% set buttonId = "previous" %} 
-    {% set buttonTitle = "Previous photo (←)" %}
+    {% set buttonTitle = "Previous (←)" %}
     {% set buttonLink = pagination.href.previous %} 
     {% include "src/_includes/components/button-link.njk" %}
   </div>
@@ -40,7 +40,7 @@ eleventyComputed:
   <div class="flex fixed top-0 right-0 items-center min-h-[100svh]">
     {% set buttonIcon = "src/_includes/icons/next.njk" %}
     {% set buttonId = "next" %} 
-    {% set buttonTitle = "Next photo (→)" %}
+    {% set buttonTitle = "Next (→)" %}
     {% set buttonLink = pagination.href.next %} 
     {% include "src/_includes/components/button-link.njk" %}
   </div>
@@ -52,7 +52,7 @@ eleventyComputed:
     {% set buttonIcon = "src/_includes/icons/details.njk" %}
     {% set buttonClasses = "float-left" %}
     {% set buttonId = "details" %}
-    {% set buttonTitle = "Photo details (D)" %}
+    {% set buttonTitle = "Details (D)" %}
     {% set buttonClickFunc = "(function(){ document.getElementById('dialog-details').showModal();})(this)" %}
     {% include "src/_includes/components/button.njk" %}
   {%- endif -%}
@@ -65,5 +65,5 @@ eleventyComputed:
 </div>
 
 {%block js %}
-  <script type="module" src="/js/photo.ts"></script>
+  <script type="module" src="/js/preview.ts"></script>
 {% endblock %}
