Add prettier formatting to njk files

--- a/src/_includes/components/button-link.njk
+++ b/src/_includes/components/button-link.njk
@@ -1,3 +1,8 @@
-<a href="{{ buttonLink or '#' }}" id="{{ buttonId }}" class="inline-block rounded-full outline-0 m-2 p-2 text-gray-950 bg-gray-300 bg-opacity-25 hover:bg-opacity-50 drop-shadow backdrop-blur-sm duration-300 {{ buttonClasses }}" title="{{ buttonTitle }}">
-    {% include buttonIcon %}
-</a>  
+<a
+  href="{{ buttonLink or '#' }}"
+  id="{{ buttonId }}"
+  class="inline-block rounded-full outline-0 m-2 p-2 text-gray-950 bg-gray-300 bg-opacity-25 hover:bg-opacity-50 drop-shadow backdrop-blur-sm duration-300 {{ buttonClasses }}"
+  title="{{ buttonTitle }}"
+>
+  {% include buttonIcon %}
+</a>
