--- a/src/_includes/icons/aperture.njk
+++ b/src/_includes/icons/aperture.njk
@@ -1,5 +1,15 @@
 {# Icons from: https://feathericons.com/ #}
-<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+<svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="20"
+  height="20"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2.5"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
   <circle cx="12" cy="12" r="10"></circle>
   <line x1="14.31" y1="8" x2="20.05" y2="17.94"></line>
   <line x1="9.69" y1="8" x2="21.17" y2="8"></line>
