--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,10 +1,10 @@
 {# Metadata -#}
-{% set metaTitle = title | safe if title else config.title | safe -%}
-{% set metaDescription = description | truncate(160) if description else config.description -%}
-{% set metaImage = [imageUrl,"?w=1200&fm=jpg"] | join if imageUrl else [config.siteUrl, "/metadata/meta-image.jpg"] | join -%}
-{% set metaUrl = config.siteUrl -%}
+{%- set metaTitle = title | safe if title else config.title | safe -%}
+{%- set metaDescription = description | truncate(160) if description else config.description -%}
+{%- set metaImage = [imageUrl,"?w=1200&fm=jpg"] | join if imageUrl else [config.siteUrl, "/metadata/meta-image.jpg"] | join -%}
+{%- set metaUrl = config.siteUrl -%}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="{{ config.language }}">
   <head>
     <meta charset="utf-8" />
@@ -27,20 +27,37 @@
     <meta property="twitter:image" content="{{ metaImage }}" />
 
     <!-- App icons / favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/metadata/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/metadata/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/metadata/favicon-16x16.png">
-    <link rel="icon" type="image/x-icon" href="/metadata/favicon.ico">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/metadata/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/metadata/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/metadata/favicon-16x16.png"
+    />
+    <link rel="icon" type="image/x-icon" href="/metadata/favicon.ico" />
 
-    {% if config.allowIndexing === "false" -%}
-    <meta name="robots" content="noindex">
-    {% endif -%}
+    {%- if config.allowIndexing === "false" -%}
+      <meta name="robots" content="noindex" />
+    {%- endif -%}
 
     <script type="module" src="/js/main.ts"></script>
   </head>
-  <body class="{% if config.colorPreference == 'auto' %}bg-white dark:bg-black{% elif config.colorPreference == 'dark' %}bg-black{% else %}bg-white{% endif %}">
+  <body
+    class="{% if config.colorPreference == 'auto' %}bg-white dark:bg-black{% elif config.colorPreference == 'dark' %}bg-black{% else %}bg-white{% endif %}"
+  >
     {{ content | safe }}
 
-    {%- block js %}{% endblock -%}
+    {%- block js -%}
+    {%- endblock -%}
   </body>
 </html>
