--- a/src/admin/index.njk
+++ b/src/admin/index.njk
@@ -1,5 +1,5 @@
 <!-- https://www.sanity.io/docs/embedding-sanity-studio -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
