--- a/src/rss.njk
+++ b/src/rss.njk
@@ -4,6 +4,8 @@
   "eleventyExcludeFromCollections": true
 }
 ---
+
+<!-- prettier-ignore-start -->
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xml:base="{{ metadata.url }}" xmlns:atom="http://www.w3.org/2005/Atom">
   <channel>
@@ -27,3 +29,4 @@
     {%- endfor %}
   </channel>
 </rss>
+<!-- prettier-ignore-end -->
