--- a/src/preview.njk
+++ b/src/preview.njk
@@ -12,10 +12,25 @@ eleventyComputed:
 ---
 
 <div class="flex h-[100svh] w-screen items-center justify-center">
-  <div class="max-w-[100vw] min-h-[100svh] relative flex items-center" style="aspect-ratio: {{ image.aspectRatio | round(2) }}">
-    <div class="absolute min-h-full min-w-full backdrop-blur-xl transition-opacity duration-1000"></div>
-    <img alt="{{ image.altText or image.title or 'Description not available' }}" class="max-h-[100svh] min-w-full max-w-[100vw] object-cover" src="{{ image.lqip }}" style="aspect-ratio: {{ image.aspectRatio }}" />
-    <img alt="{{ image.altText or image.title or 'Description not available' }}" class="hidden" onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)" src="{{ image | toOptimizedURLFromObj | safe }}" />
+  <div
+    class="max-w-[100vw] min-h-[100svh] relative flex items-center"
+    style="aspect-ratio: {{ image.aspectRatio | round(2) }}"
+  >
+    <div
+      class="absolute min-h-full min-w-full backdrop-blur-xl transition-opacity duration-1000"
+    ></div>
+    <img
+      alt="{{ image.altText or image.title or 'Description not available' }}"
+      class="max-h-[100svh] min-w-full max-w-[100vw] object-cover"
+      src="{{ image.lqip }}"
+      style="aspect-ratio: {{ image.aspectRatio }}"
+    />
+    <img
+      alt="{{ image.altText or image.title or 'Description not available' }}"
+      class="hidden"
+      onload="(function(el){el.onload='';el.previousElementSibling.src = el.src;el.previousElementSibling.previousElementSibling.classList.add('opacity-0')})(this)"
+      src="{{ image | toOptimizedURLFromObj | safe }}"
+    />
   </div>
 
   {# Details dialog (modal) markup #}
@@ -29,9 +44,9 @@ eleventyComputed:
 {%- if pagination.href.previous -%}
   <div class="flex fixed top-0 left-0 items-center min-h-[100svh]">
     {% set buttonIcon = "src/_includes/icons/previous.njk" %}
-    {% set buttonId = "previous" %} 
+    {% set buttonId = "previous" %}
     {% set buttonTitle = "Previous (←)" %}
-    {% set buttonLink = pagination.href.previous %} 
+    {% set buttonLink = pagination.href.previous %}
     {% include "src/_includes/components/button-link.njk" %}
   </div>
 {%- endif -%}
@@ -39,9 +54,9 @@ eleventyComputed:
 {%- if pagination.href.next -%}
   <div class="flex fixed top-0 right-0 items-center min-h-[100svh]">
     {% set buttonIcon = "src/_includes/icons/next.njk" %}
-    {% set buttonId = "next" %} 
+    {% set buttonId = "next" %}
     {% set buttonTitle = "Next (→)" %}
-    {% set buttonLink = pagination.href.next %} 
+    {% set buttonLink = pagination.href.next %}
     {% include "src/_includes/components/button-link.njk" %}
   </div>
 {%- endif -%}
@@ -56,14 +71,14 @@ eleventyComputed:
     {% set buttonClickFunc = "(function(){ document.getElementById('dialog-details').showModal();})(this)" %}
     {% include "src/_includes/components/button.njk" %}
   {%- endif -%}
-  
   {% set buttonIcon = "src/_includes/icons/close.njk" %}
-  {% set buttonId = "close" %} 
+  {% set buttonId = "close" %}
   {% set buttonTitle = "Close (Esc)" %}
-  {% set buttonLink = ['/', config.basePathName] | join %} {# TODO: check if it goes to the previous place and check with subdomains #}
+  {% set buttonLink = ['/', config.basePathName] | join %}
+  {# TODO: check if it goes to the previous place and check with subdomains #}
   {% include "src/_includes/components/button-link.njk" %}
 </div>
 
-{%block js %}
+{% block js %}
   <script type="module" src="/js/preview.ts"></script>
 {% endblock %}
