--- a/src/rss.njk
+++ b/src/rss.njk
@@ -7,11 +7,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xml:base="{{ metadata.url }}" xmlns:atom="http://www.w3.org/2005/Atom">
   <channel>
-    <title>{{ config.title }}</title>
+    <title>{{ config.metadata.title }}</title>
     <link>{{ '' | toAbsoluteURL }}</link>
     <atom:link href="{{  permalink | toAbsoluteURL }}" rel="self" type="application/rss+xml" />
-    <description>{{ config.description }}</description>
-    <language>{{ config.language }}</language>
+    <description>{{ config.metadata.description }}</description>
+    <language>{{ config.metadata.language }}</language>
     {%- for image in sanity %}
     <item>
       <title>{{ image.title or "Untitled" }}</title>
