--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,7 +1,7 @@
 {# Metadata -#}
 {%- set metaTitle = title | safe if title else config.metadata.title | safe -%}
 {%- set metaDescription = description | truncate(160) if description else config.metadata.description -%}
-{%- set metaImage = [imageUrl,"?w=1200&fm=jpg"] | join if imageUrl else "/metadata/meta-image.jpg" | toAbsoluteURL -%}
+{%- set metaImage = [imageUrl,"?w=1200&fm=jpg"] | join if imageUrl else "/metadata/meta-image.jpg" | toAbsoluteUrl -%}
 {%- set metaUrl = config.app.domain -%}
 
 <!doctype html>
